test/nashorn/script/basic/es6/let-const-statement-context.js.EXPECTED
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:10 Expected statement but found let declaration
if (true) let x = 1;
          ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:10 Expected statement but found const declaration
if (true) const x = 1;
          ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:13 Expected statement but found let declaration
while (true) let x = 1;
             ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:13 Expected statement but found const declaration
while (true) const x = 1;
             ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:9 Expected statement but found let declaration
for (;;) let x = 1;
         ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:9 Expected statement but found const declaration
for (;;) const x = 1;
         ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:3 Expected statement but found let declaration
do let x = 1; while (true);
   ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:3 Expected statement but found const declaration
do const x = 1; while (true);
   ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:9 Expected statement but found const declaration
with (y) const x = 1;
         ^
SyntaxError: test/nashorn/script/basic/es6/let-const-statement-context.js#34:8<eval>:1:9 Expected statement but found let declaration
with (y) let x = 1;
         ^
